# DOVE

./: .gitignore  BENCHMARKS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TUTORIAL.md  VIRTUAL_INTERVIEW.md  pyproject.toml  requirements.txt  run_doveboard.cmd  run_doveboard.ps1
.streamlit/: config.toml
app/: streamlit_app.py
config/: headless.example.yaml  headless.genetics.example.yaml  models.example.yaml  virtual_interview.large_local.yaml  virtual_interview.large_local_smoke.yaml  virtual_interview.local.yaml  virtual_interview.openai_judged.yaml  virtual_interview.smoke.yaml
prompts/: generate_questions_from_corpus.md  generate_questions_from_domain.md  gyn_surgical_note_feature_extraction.md
scripts/: build_gyn_surgery_benchmark.py  build_seed_benchmarks.py  build_virtual_interview_benchmarks.py  build_wiki.py  curate_questions.py  emit_virtual_interview_benchmarks.py  export_report.py  generate_html_report.py  generate_interview_report.py  generate_private_benchmark.py  generate_questions.py  ingest_corpus.py  interview_specs_advanced.py  interview_specs_senior.py  merge_interview_runs.py  run_benchmark.py  run_benchmark_report.py  run_openai_judged_interview.py  run_private_benchmark_background.ps1  run_virtual_interview.py  run_virtual_interview_checkpointed.README.md  run_virtual_interview_checkpointed.py  run_virtual_interview_incremental.py  status_private_benchmark.ps1
tests/: test_core.py  test_headless_report.py  test_merge_interview_runs.py  test_model_selection.py  test_openai_judged_interview.py  test_private_document_pipeline.py  (+4 more)
(+45 files in other folders)
